Fix error for build successfully